--- a/po/main/de.po
+++ b/po/main/de.po
@@ -1,7 +1,7 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # C E <githubce@eiselt.ch>, 2020
 # Nikolai Bohl <n.kay01@gmail.com>, 2020
@@ -12,7 +12,7 @@
 # Nils Briggen, 2022
 # reloxx13 <reloxx@interia.pl>, 2022
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -49,17 +49,17 @@ msgstr ""
 
 #. Error message
 #: SABnzbd.py
-msgid "SABYenc disabled: no correct version found! (Found v%s, expecting v%s)"
+msgid "SABCTools disabled: no correct version found! (Found v%s, expecting v%s)"
 msgstr ""
-"SABYenc deaktiviert: Keine korrekte Version gefunden! (Gefunden v%s, "
+"SABCTools deaktiviert: Keine korrekte Version gefunden! (Gefunden v%s, "
 "Erwartet v%s)"
 
 #. Error message
 #: SABnzbd.py
 msgid ""
-"SABYenc module... NOT found! Expecting v%s - https://sabnzbd.org/sabyenc"
+"SABCTools module... NOT found! Expecting v%s - https://sabnzbd.org/sabctools"
 msgstr ""
-"SABYenc Modul... Nicht gefunden! Erwarte v%s - https://sabnzbd.org/sabyenc"
+"SABCTools Modul... Nicht gefunden! Erwarte v%s - https://sabnzbd.org/sabctools"
 
 #. Error message
 #: SABnzbd.py
