--- a/po/main/fr.po
+++ b/po/main/fr.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# Fred L <88com88@gmail.com>, 2023
-# 
+# Fred L <88com88@gmail.com>, 2022
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -42,17 +42,17 @@ msgstr ""
 
 #. Error message
 #: SABnzbd.py
-msgid "SABYenc disabled: no correct version found! (Found v%s, expecting v%s)"
+msgid "SABCTools disabled: no correct version found! (Found v%s, expecting v%s)"
 msgstr ""
-"SABYenc désactivé: aucune version correcte n'a été trouvée ! (v%s trouvée, "
+"SABCTools désactivé: aucune version correcte n'a été trouvée ! (v%s trouvée, "
 "v%s attendue)"
 
 #. Error message
 #: SABnzbd.py
 msgid ""
-"SABYenc module... NOT found! Expecting v%s - https://sabnzbd.org/sabyenc"
+"SABCTools module... NOT found! Expecting v%s - https://sabnzbd.org/sabctools"
 msgstr ""
-"Module SABYenc... NON trouvé ! v%s attendue - https://sabnzbd.org/sabyenc"
+"Module SABCTools... NON trouvé ! v%s attendue - https://sabnzbd.org/sabctools"
 
 #. Error message
 #: SABnzbd.py
