--- a/po/main/nb.po
+++ b/po/main/nb.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -39,16 +39,16 @@ msgstr "Kan ikke finne webmal: %s, prøver standardmal"
 
 #. Error message
 #: SABnzbd.py
-msgid "SABYenc disabled: no correct version found! (Found v%s, expecting v%s)"
+msgid "SABCTools disabled: no correct version found! (Found v%s, expecting v%s)"
 msgstr ""
-"SABYenc deaktivert: Fant ikke korrekt versjon! (Fant v%s, forventet v%s)"
+"SABCTools deaktivert: Fant ikke korrekt versjon! (Fant v%s, forventet v%s)"
 
 #. Error message
 #: SABnzbd.py
 msgid ""
-"SABYenc module... NOT found! Expecting v%s - https://sabnzbd.org/sabyenc"
+"SABCTools module... NOT found! Expecting v%s - https://sabnzbd.org/sabctools"
 msgstr ""
-"SABYenc modul... IKKE funnet! Forventet v%s - https://sabnzbd.org/sabyenc"
+"SABCTools modul... IKKE funnet! Forventet v%s - https://sabnzbd.org/sabctools"
 
 #. Error message
 #: SABnzbd.py
