--- a/po/main/ro.po
+++ b/po/main/ro.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Eduard Baniceru <war4peace@gmail.com>, 2021
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -40,17 +40,17 @@ msgstr "Nu se poate găsi şablon web:%s, se încearcă şablon standard"
 
 #. Error message
 #: SABnzbd.py
-msgid "SABYenc disabled: no correct version found! (Found v%s, expecting v%s)"
+msgid "SABCTools disabled: no correct version found! (Found v%s, expecting v%s)"
 msgstr ""
-"SABYenc dezactivat: nu s-a găsit o versiune corectă! (Găsită v%s, se "
+"SABCTools dezactivat: nu s-a găsit o versiune corectă! (Găsită v%s, se "
 "așteaptă v%s)"
 
 #. Error message
 #: SABnzbd.py
 msgid ""
-"SABYenc module... NOT found! Expecting v%s - https://sabnzbd.org/sabyenc"
+"SABCTools module... NOT found! Expecting v%s - https://sabnzbd.org/sabctools"
 msgstr ""
-"Modul SABYenc... NEgăsit! Se așteaptă v%s - https://sabnzbd.org/sabyenc"
+"Modul SABCTools... NEgăsit! Se așteaptă v%s - https://sabnzbd.org/sabctools"
 
 #. Error message
 #: SABnzbd.py
