--- a/po/main/zh_CN.po
+++ b/po/main/zh_CN.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2022 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2022
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-3.8.0-develop\n"
@@ -39,14 +39,14 @@ msgstr "无法找到 web 模板: %s，正在尝试标准模板"
 
 #. Error message
 #: SABnzbd.py
-msgid "SABYenc disabled: no correct version found! (Found v%s, expecting v%s)"
-msgstr "SABYenc 已禁用：未找到正确的版本！（找到 v%s，要求 v%s）"
+msgid "SABCTools disabled: no correct version found! (Found v%s, expecting v%s)"
+msgstr "SABCTools 已禁用：未找到正确的版本！（找到 v%s，要求 v%s）"
 
 #. Error message
 #: SABnzbd.py
 msgid ""
-"SABYenc module... NOT found! Expecting v%s - https://sabnzbd.org/sabyenc"
-msgstr "SABYenc 模块... 未找到！要求  v%s - https://sabnzbd.org/sabyenc"
+"SABCTools module... NOT found! Expecting v%s - https://sabnzbd.org/sabctools"
+msgstr "SABCTools 模块... 未找到！要求  v%s - https://sabnzbd.org/sabctools"
 
 #. Error message
 #: SABnzbd.py
