--- a/README.mkd
+++ b/README.mkd
@@ -1,39 +1,24 @@
-Release Notes - SABnzbd 3.7.0 Beta 1
+Release Notes - SABnzbd 4.0.0 Alpha 1
 =========================================================
 
-## Changes since 3.6.1
-- The queue and history can be filtered using keywords:
-  `cat` and `priority`. For example: `show name cat:tv`.
-- Use shortcut `shift + arrow-key` to navigate the queue/history pages.
-- The backup is now created in a local folder for security.
-- Recurring backups can be configured using the scheduler.
-- Improvements to Deobfuscate Final Filenames.
-- RSS overview shows the rule that accepted the job.
-- Added option to sort the queue by `% downloaded`.
-- Added option to replace underscores with dots in folder names.
-- SABnzbd Host input will be validated before being applied.
-- Moved system load information from the main page to the Status window.
-- Console logging is now written to `stdout` instead of `stderr`.
-- Removed Special settings `enable_meta`, `disable_key`,
-  `replace_illegal`, `osx_speed` and `show_sysload`.
-- Merged Special settings `win_menu` and `osx_menu` into `tray_icon`.
-- macOS/Windows: Use Python 3.11rc2, boosting overall performance.
-- macOS/Windows: Updated UnRar to 6.12.
-- Windows: Updated MultiPar to 1.3.2.5.
+## Changes since 3.7.2
+- In this major update we replaced a core part of Python's SSL handling
+  with our own improved version. This results in large performance increases
+  when downloading from news servers with SSL enabled.
+  In addition, the general connection handling was overhauled, resulting in
+  performance improvements for all news servers.
+  Special thanks to: mnightingale, puzzledsab and animetosho!
+- When adding a new news server, SSL is enabled by default.
+- File assembly performance significantly improved by relying on the
+  CRC32 instead of the MD5 to perform QuickCheck of files.
+- Slowdown more gracefully when the cache fills up.
+- HTTPS files are included in the `Backup`.
+- Improved `Watched Folder` scanning and processing.
+- Dropped support for Python 3.7.
 
-# API changes since 3.6.1
-- Minor improvements in API call performance.
-- Removed fields `scripts` and `categories` from `queue` API call.
-- Moved `loadavg` from `queue` to `status` API call.
-
-# Bugfixes since 3.6.1
-- Free Space Detection was too strict when using Direct Unpack.
-- File uploads with special characters would be parsed incorrectly.
-- Passwords from NZB meta-data were tried multiple times.
-- Passwords were not always supplied to the pre-queue script.
-- RSS-feed names were not sanitized when renamed.
-- Make sure short-dates are detected as `YY-MM-DD` in Sorting.
-- Show the custom job name in History when the NZB could not be fetched.
+# Bugfixes since 3.7.2
+- Restore applying `History Retention` setting at startup.
+- Windows: Not all invalid characters were removed from filenames.
 
 ## Upgrade notices
 - The download statistics file `totals10.sab` is updated in 3.2.x
