--- a/po/main/de.po
+++ b/po/main/de.po
@@ -1915,32 +1915,32 @@ msgstr "Abgeschlossene Aufträge entfernen"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Pause low prioirty jobs"
+msgid "Pause low priority jobs"
 msgstr "Aufträge mit niedriger Priorität pausieren"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Pause normal prioirty jobs"
+msgid "Pause normal priority jobs"
 msgstr "Aufträge mit normaler Priorität pausieren"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Pause high prioirty jobs"
+msgid "Pause high priority jobs"
 msgstr "Aufträge mit hoher Priorität pausieren"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Resume low prioirty jobs"
+msgid "Resume low priority jobs"
 msgstr "Aufträge mit niedriger Priorität fortsetzen"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Resume normal prioirty jobs"
+msgid "Resume normal priority jobs"
 msgstr "Aufträge mit normaler Priorität fortsetzen"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Resume high prioirty jobs"
+msgid "Resume high priority jobs"
 msgstr "Aufträge mit hoher Priorität fortsetzen"
 
 #. Config->Scheduler
