--- a/po/main/he.po
+++ b/po/main/he.po
@@ -1852,32 +1852,32 @@ msgstr "הסר עבודות נשלמות"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Pause low prioirty jobs"
+msgid "Pause low priority jobs"
 msgstr "השהה עבודות עם עדיפות נמוכה"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Pause normal prioirty jobs"
+msgid "Pause normal priority jobs"
 msgstr "השהה עבודות עם עדיפות רגילה"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Pause high prioirty jobs"
+msgid "Pause high priority jobs"
 msgstr "השהה עבודות עם עדיפות גבוהה"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Resume low prioirty jobs"
+msgid "Resume low priority jobs"
 msgstr "המשך עבודות עם עדיפות נמוכה"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Resume normal prioirty jobs"
+msgid "Resume normal priority jobs"
 msgstr "המשך עבודות עם עדיפות רגילה"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Resume high prioirty jobs"
+msgid "Resume high priority jobs"
 msgstr "המשך עבודות עם עדיפות גבוהה"
 
 #. Config->Scheduler
