--- a/po/main/nl.po
+++ b/po/main/nl.po
@@ -1891,32 +1891,32 @@ msgstr "Verwijder voltooide downloads"
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Pause low prioirty jobs"
+msgid "Pause low priority jobs"
 msgstr "Pauzeer downloads met prioriteit \"Laag\""
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Pause normal prioirty jobs"
+msgid "Pause normal priority jobs"
 msgstr "Pauzeer downloads met prioriteit \"Normaal\""
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Pause high prioirty jobs"
+msgid "Pause high priority jobs"
 msgstr "Pauzeer downloads met prioriteit \"Hoog\""
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Resume low prioirty jobs"
+msgid "Resume low priority jobs"
 msgstr "Hervat downloads met prioriteit \"Laag\""
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Resume normal prioirty jobs"
+msgid "Resume normal priority jobs"
 msgstr "Hervat downloads met prioriteit \"Normaal\""
 
 #. Config->Scheduler
 #: sabnzbd/skintext.py
-msgid "Resume high prioirty jobs"
+msgid "Resume high priority jobs"
 msgstr "Hervat downloads met prioriteit \"Hoog\""
 
 #. Config->Scheduler
