--- a/README.mkd
+++ b/README.mkd
@@ -1,10 +1,5 @@
-Release Notes - SABnzbd 4.0.0 Beta 2
+Release Notes - SABnzbd 4.0.0 Release Candidate 2
 =========================================================
-
-## Changes and bugfixes since 4.0.0 Beta 1
-- Bugfixes and minor improvements of the downloader changes.
-- Not all `.par2` files were removed after repair.
-- Ignore resource fork files created by macOS.
 
 ## Changes since 3.7.2
 - In this major update we replaced a core part of Python's SSL handling
@@ -24,12 +19,14 @@ Release Notes - SABnzbd 4.0.0 Beta 2
 - Replaced separate Series/Movie/Date Sorting with general Sorter.
 - HTTPS files are included in the `Backup`.
 - Improved `Watched Folder` scanning and processing.
+- Ignore resource fork files created by macOS.
 - `Deobfuscate final filenames` is enabled for new installations.
 - Dropped support for Python 3.7.
 
 ## Bugfixes since 3.7.2
 - Restore applying `History Retention` setting at startup.
 - Windows: Not all invalid characters were removed from filenames.
+- Windows: Firewall rules were not removed by uninstaller.
 
 ## Upgrade notices
 - The download statistics file `totals10.sab` is updated in 3.2.x
