--- a/README.mkd
+++ b/README.mkd
@@ -1,17 +1,14 @@
-Release Notes - SABnzbd 4.0.0 Release Candidate 2
+Release Notes - SABnzbd 4.0.0
 =========================================================
 
 ## Changes since 3.7.2
-- In this major update we replaced a core part of Python's SSL handling
-  with our own improved version. This results in large performance increases
-  when downloading from news servers with SSL enabled.
-  In addition, the general connection handling was overhauled, resulting in
-  performance improvements for all news servers.
+- In this major update we optimized a core part of the SSL handling.
+  This results in large performance increases when downloading from news
+  servers with SSL enabled. In addition, the general connection handling
+  was improved, resulting in performance improvements for all news servers.
   Special thanks to: mnightingale, puzzledsab and animetosho!
 - There are multiple settings that can tweak performance, see:
   https://github.com/sabnzbd/sabnzbd/discussions/2474
-  We are trying to find the most optimal default settings, so you
-  can help us by letting us know the results on your system!
 - When adding a new news server, SSL is enabled by default.
 - File assembly performance significantly improved by relying on the
   CRC32 instead of the MD5 to perform QuickCheck of files.
