--- a/po/main/fi.po
+++ b/po/main/fi.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.1.0-develop\n"
@@ -2985,11 +2985,9 @@ msgstr "Vahdittu kansio"
 
 #: sabnzbd/skintext.py
 msgid ""
-"Folder to monitor for .nzb files.<br /><i>Also scans .zip .rar and .tar.gz "
-"archives for .nzb files.</i>"
+"Folder to monitor for .nzb files."
 msgstr ""
-"Kansio jota vahditaan .nzb tiedostojen varalta.<br /><i>Etsii .nzb "
-"tiedostoja myös .zip .rar ja .tar.gz arkistojen sisältä.</i>"
+"Kansio jota vahditaan .nzb tiedostojen varalta."
 
 #: sabnzbd/skintext.py
 msgid "Watched Folder Scan Speed"
