--- a/po/main/he.po
+++ b/po/main/he.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # ION, 2022
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.1.0-develop\n"
@@ -2993,11 +2993,9 @@ msgstr "תיקייה מושגחת"
 
 #: sabnzbd/skintext.py
 msgid ""
-"Folder to monitor for .nzb files.<br /><i>Also scans .zip .rar and .tar.gz "
-"archives for .nzb files.</i>"
+"Folder to monitor for .nzb files."
 msgstr ""
-"תיקייה לניטור אחר קבצי nzb.<br /><i>סורק גם ארכיונים מסוג .zip .rar "
-"ו־.tar.gz ואחר קבצי nzb.</i>"
+"תיקייה לניטור אחר קבצי nzb."
 
 #: sabnzbd/skintext.py
 msgid "Watched Folder Scan Speed"
