--- a/po/main/SABnzbd.pot
+++ b/po/main/SABnzbd.pot
@@ -2793,7 +2793,7 @@ msgid "Watched Folder"
 msgstr ""
 
 #: sabnzbd/skintext.py
-msgid "Folder to monitor for .nzb files.<br /><i>Also scans .zip .rar and .tar.gz archives for .nzb files.</i>"
+msgid "Folder to monitor for .nzb files."
 msgstr ""
 
 #: sabnzbd/skintext.py
