--- a/po/main/nb.po
+++ b/po/main/nb.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.1.0-develop\n"
@@ -2970,11 +2970,9 @@ msgstr "Overvåket Mappe"
 
 #: sabnzbd/skintext.py
 msgid ""
-"Folder to monitor for .nzb files.<br /><i>Also scans .zip .rar and .tar.gz "
-"archives for .nzb files.</i>"
+"Folder to monitor for .nzb files."
 msgstr ""
-"Mappe som automatiskt søkes igjennom etter .nzb filer.<br /><i>Skanner også "
-"igjennom .zip .rar og .tar.gz arkiver etter .nzb filer.</i>"
+"Mappe som automatiskt søkes igjennom etter .nzb filer."
 
 #: sabnzbd/skintext.py
 msgid "Watched Folder Scan Speed"
