--- a/po/main/nl.po
+++ b/po/main/nl.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Rik Brouwer, 2022
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.1.0-develop\n"
@@ -3047,10 +3047,9 @@ msgstr "Bewaakte map"
 
 #: sabnzbd/skintext.py
 msgid ""
-"Folder to monitor for .nzb files.<br /><i>Also scans .zip .rar and .tar.gz "
-"archives for .nzb files.</i>"
+"Folder to monitor for .nzb files."
 msgstr ""
-".NZB en .ZIP-bestanden in deze map worden automatisch toegevoegd aan de "
+".nzb bestanden in deze map worden automatisch toegevoegd aan de "
 "wachtrij."
 
 #: sabnzbd/skintext.py
