--- a/po/main/pt_BR.po
+++ b/po/main/pt_BR.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.1.0-develop\n"
@@ -2979,11 +2979,9 @@ msgstr "Pasta de Assistidos"
 
 #: sabnzbd/skintext.py
 msgid ""
-"Folder to monitor for .nzb files.<br /><i>Also scans .zip .rar and .tar.gz "
-"archives for .nzb files.</i>"
+"Folder to monitor for .nzb files."
 msgstr ""
-"Pasta para monitorar por arquivos .nzb.<br /><i>Também procura arquivos .nzb"
-" em arquivos .zip, .rar e .tar.gz.</i>"
+"Pasta para monitorar por arquivos .nzb."
 
 #: sabnzbd/skintext.py
 msgid "Watched Folder Scan Speed"
