--- a/po/main/ro.po
+++ b/po/main/ro.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Eduard Baniceru <war4peace@gmail.com>, 2021
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.1.0-develop\n"
@@ -3006,11 +3006,9 @@ msgstr "Dosar Monitorizat"
 
 #: sabnzbd/skintext.py
 msgid ""
-"Folder to monitor for .nzb files.<br /><i>Also scans .zip .rar and .tar.gz "
-"archives for .nzb files.</i>"
+"Folder to monitor for .nzb files."
 msgstr ""
-"Dosar pentru supraveghere fişiere .nzb.<br /><i>Scanează de asemenea şi "
-"arhivele .zip .rar .tar.gz de fişiere .nzb.</i>"
+"Dosar pentru supraveghere fişiere .nzb."
 
 #: sabnzbd/skintext.py
 msgid "Watched Folder Scan Speed"
