--- a/po/main/sr.po
+++ b/po/main/sr.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.1.0-develop\n"
@@ -2961,12 +2961,9 @@ msgstr "Надгледана фасцикла"
 
 #: sabnzbd/skintext.py
 msgid ""
-"Folder to monitor for .nzb files.<br /><i>Also scans .zip .rar and .tar.gz "
-"archives for .nzb files.</i>"
+"Folder to monitor for .nzb files."
 msgstr ""
-"Фасцикла за надгледање <b>.nzb</b> датотека.<br /><i>Такође скенира "
-"<b>.zip</b> <b>.rar</b> и <b>.tar.gz</b> архиве у потрази за <b>.nzb</b> "
-"датотекама.</i>"
+"Фасцикла за надгледање .nzb датотека."
 
 #: sabnzbd/skintext.py
 msgid "Watched Folder Scan Speed"
