--- a/po/main/sv.po
+++ b/po/main/sv.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
 #   team@sabnzbd.org
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.1.0-develop\n"
@@ -2972,11 +2972,9 @@ msgstr "Övervakad Mapp"
 
 #: sabnzbd/skintext.py
 msgid ""
-"Folder to monitor for .nzb files.<br /><i>Also scans .zip .rar and .tar.gz "
-"archives for .nzb files.</i>"
+"Folder to monitor for .nzb files."
 msgstr ""
-"Mapp som igenomsöks automatiskt efter .nzb filer.<br /><i>Skannar även "
-"igenom .zip .rar och .tar.gz arkiv efter .nzb filer.</i>"
+"Mapp som igenomsöks automatiskt efter .nzb filer."
 
 #: sabnzbd/skintext.py
 msgid "Watched Folder Scan Speed"
