--- a/README.mkd
+++ b/README.mkd
@@ -1,4 +1,4 @@
-Release Notes - SABnzbd 4.1.0 Alpha 1
+Release Notes - SABnzbd 4.1.0 Beta 1
 =========================================================
 
 ## Changes since 4.0.3
