--- a/po/main/da.po
+++ b/po/main/da.po
@@ -1,9 +1,9 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.2.0-develop\n"
@@ -166,8 +166,8 @@ msgid "Test Notification"
 msgstr "Afprøv notifikation"
 
 #: sabnzbd/api.py
-msgid "&nbsp;Resolving address"
-msgstr "&nbsp; Server løsning"
+msgid "Resolving address"
+msgstr "Server løsning"
 
 #. No value, used in dropdown menus
 #: sabnzbd/api.py, sabnzbd/skintext.py
