--- a/po/main/nl.po
+++ b/po/main/nl.po
@@ -1,11 +1,11 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
-# 
+#
 # Translators:
 # Rik Brouwer, 2022
 # Robert Lampe, 2023
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.2.0-develop\n"
@@ -172,8 +172,8 @@ msgid "Test Notification"
 msgstr "Test melding"
 
 #: sabnzbd/api.py
-msgid "&nbsp;Resolving address"
-msgstr "&nbsp;Adres opzoeken"
+msgid "Resolving address"
+msgstr "Adres opzoeken"
 
 #. No value, used in dropdown menus
 #: sabnzbd/api.py, sabnzbd/skintext.py
