--- a/po/main/fi.po
+++ b/po/main/fi.po
@@ -1,9 +1,9 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.2.0-develop\n"
@@ -168,8 +168,8 @@ msgid "Test Notification"
 msgstr "Testaa ilmoitusta"
 
 #: sabnzbd/api.py
-msgid "&nbsp;Resolving address"
-msgstr "&nbsp;Selvitetään osoitetta"
+msgid "Resolving address"
+msgstr "Selvitetään osoitetta"
 
 #. No value, used in dropdown menus
 #: sabnzbd/api.py, sabnzbd/skintext.py
