--- a/po/main/pl.po
+++ b/po/main/pl.po
@@ -1,9 +1,9 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.2.0-develop\n"
@@ -160,8 +160,8 @@ msgid "Test Notification"
 msgstr "Powiadomienie testowe"
 
 #: sabnzbd/api.py
-msgid "&nbsp;Resolving address"
-msgstr "&nbsp;Rozwiązywanie adresu"
+msgid "Resolving address"
+msgstr "Rozwiązywanie adresu"
 
 #. No value, used in dropdown menus
 #: sabnzbd/api.py, sabnzbd/skintext.py
