--- a/po/main/pt_BR.po
+++ b/po/main/pt_BR.po
@@ -1,9 +1,9 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
-# 
+#
 # Translators:
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.2.0-develop\n"
@@ -164,8 +164,8 @@ msgid "Test Notification"
 msgstr "Notificação de teste"
 
 #: sabnzbd/api.py
-msgid "&nbsp;Resolving address"
-msgstr "&nbsp;Resolvendo endereço"
+msgid "Resolving address"
+msgstr "Resolvendo endereço"
 
 #. No value, used in dropdown menus
 #: sabnzbd/api.py, sabnzbd/skintext.py
