--- a/po/main/ro.po
+++ b/po/main/ro.po
@@ -1,10 +1,10 @@
 # SABnzbd Translation Template file MAIN
 # Copyright 2007-2023 The SABnzbd-Team
-# 
+#
 # Translators:
 # Eduard Baniceru <war4peace@gmail.com>, 2021
 # Safihre <safihre@sabnzbd.org>, 2023
-# 
+#
 msgid ""
 msgstr ""
 "Project-Id-Version: SABnzbd-4.2.0-develop\n"
@@ -169,8 +169,8 @@ msgid "Test Notification"
 msgstr "Notificări Test"
 
 #: sabnzbd/api.py
-msgid "&nbsp;Resolving address"
-msgstr "&nbsp;Reolvare adresă"
+msgid "Resolving address"
+msgstr "Reolvare adresă"
 
 #. No value, used in dropdown menus
 #: sabnzbd/api.py, sabnzbd/skintext.py
