--- a/po/main/SABnzbd.pot
+++ b/po/main/SABnzbd.pot
@@ -263,7 +263,7 @@ msgid "Permissions setting of %s might deny SABnzbd access to the files and fold
 msgstr ""
 
 #: sabnzbd/cfg.py
-msgid "Error: Queue not empty, cannot change folder."
+msgid "Queue not empty, cannot change folder."
 msgstr ""
 
 #. Warning message
