--- a/po/main/he.po
+++ b/po/main/he.po
@@ -287,7 +287,7 @@ msgstr ""
 "הגדרת הרשאות של %s עשויה לדחות גישה מן SABnzbd אל הקבצים והתיקיות שהוא יוצר."
 
 #: sabnzbd/cfg.py
-msgid "Error: Queue not empty, cannot change folder."
+msgid "Queue not empty, cannot change folder."
 msgstr "שגיאה: התור אינו ריק, לא ניתן לשנות תיקייה."
 
 #. Warning message
