--- a/po/main/pt_BR.po
+++ b/po/main/pt_BR.po
@@ -284,7 +284,7 @@ msgid ""
 msgstr ""
 
 #: sabnzbd/cfg.py
-msgid "Error: Queue not empty, cannot change folder."
+msgid "Queue not empty, cannot change folder."
 msgstr "Erro: A fila não está vazia. Não será possível mudar de pasta."
 
 #. Warning message
