End of queue script to be moved to it's own configuration menu item
Closes #2385
Setting is not copied since it's such an exotic function.
Made pre-queue script an Advanced Setting.

--- a/po/main/en.po
+++ b/po/main/en.po
@@ -125,3 +125,6 @@ msgstr "0 is highest priority, 99 is the lowest priority"
 
 msgid "Filter out sample files (e.g. video samples)."
 msgstr "Filter out sample files (e.g. video samples/proofs)."
+
+msgid "Pre-queue user script"
+msgstr "Pre-queue script"
